:bug: corrige visibilidade da imagem zoom

--- a/style/acervo.css
+++ b/style/acervo.css
@@ -219,7 +219,7 @@ button:active {
   right: 20px;
   display: grid;   
   grid-template-columns: auto;
-  grid-template-rows: 1fr;
+  grid-template-rows: 100px;
 }
 
 .icon{
